📦 `cargo add blake3`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+blake3 = "1.8.2"
 clap = { version = "4.5.53", features = ["derive"] }
 ignore = "0.4.25"
