--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 blake3 = "1.8.2"
 clap = { version = "4.5.53", features = ["derive"] }
+dirs-next = "2.0.0"
 ignore = "0.4.25"
