--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ clap = { version = "4.5.53", features = ["derive"] }
 dirs-next = "2.0.0"
 ignore = "0.4.25"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
+
+[dev-dependencies]
+tempfile = "3.23.0"
