--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ clap = { version = "4.5.53", features = ["derive"] }
 dirs-next = "2.0.0"
 ignore = "0.4.25"
 rusqlite = { version = "0.37.0", features = ["bundled"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.146"
 
 [dev-dependencies]
 tempfile = "3.23.0"
